Small requested changes

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
         <img style="padding-bottom: 11px;" id="bio-pic" src="img/photo.jpg">
       </div>
       <div class="col-sm-4 about-right info-text">
-        Shamlo Faek is a Visual Artist capitalizing on the social media movement of his generation.<br><br>Shamlo has worked with artists such as Post Malone, Majid Jordan, Murda Beatz, Jazz Cartier and large companies including Redbull, Daniel Wellington,
-        and Daily Hive.
+        Shamlo Faek is a Visual Artist capitalizing on the social media movement of his generation.<br><br>Shamlo has worked with artists such as Future, Post Malone, Majid Jordan, Murda Beatz, Jazz Cartier and large companies including Redbull, Daniel
+        Wellington, and Daily Hive.
         <br><br>Using his gift of bringing any vision to life, Shamlo reaches the masses on a daily basis through the art of production.
         <br><br><a href="mailto:shamfaek@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i><u>shamfaek@gmail.com</u></a><br><a href="tel:778-848-3992">778-848-3992</a><br>
         <span>
