--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
         <div id="music" class="tab-pane in active">
           <div class="col-sm-6">
             <div style="position:relative;height:0;padding-bottom:66.25%"><iframe src="https://www.youtube.com/embed/UT5K5_XElFE?ecver=2" frameborder="0" style="" allowfullscreen></iframe></div>
+            <div style="position:relative;height:0;padding-bottom:66.25%"><iframe src="https://www.youtube.com/embed/mqEF3B_Bj0E?ecver=2" frameborder="0" style="" allowfullscreen></iframe></div>
           </div>
           <div class="col-sm-6">
             <div style="position:relative;height:0;padding-bottom:66.25%"><iframe src="https://www.youtube.com/embed/fiARE7FVhtQ?ecver=2" frameborder="0" style="" allowfullscreen></iframe></div>
-
+            <div style="position:relative;height:0;padding-bottom:66.25%"><iframe src="https://www.youtube.com/embed/ymqGVQF6BeU?ecver=2" frameborder="0" style="" allowfullscreen></iframe></div>
           </div>
         </div>
         <div id="shows" class="tab-pane">
@@ -96,7 +97,7 @@
         Shamlo Faek is a Visual Artist capitalizing on the social media movement of his generation.<br><br>Shamlo has worked with artists such as Future, Post Malone, Majid Jordan, Murda Beatz, Jazz Cartier and large companies including Redbull, Daniel
         Wellington, and Daily Hive.
         <br><br>Using his gift of bringing any vision to life, Shamlo reaches the masses on a daily basis through the art of production.
-        <br><br><a href="mailto:shamfaek@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i><u>shamfaek@gmail.com</u></a><br><a href="tel:778-848-3992">778-848-3992</a><br>
+        <br><br><a href="mailto:shamfaek@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i><u>shamfaek@gmail.com</u></a><br>
         <span>
                   <a href="https://facebook.com/shamfaek"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
                   <a href="https://instagram.com/shvmlo"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
