Fix section title

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="sub-menu">
         <span>
           <a id="music-videos-btn" data-toggle="tab" href="#music">MUSIC VIDEOS</a> | <a id="shows-btn" data-toggle="tab" href="#shows">
-          VIDEOS</a> | <a id="travel-btn" data-toggle="tab" href="#travel">TRAVEL VIDEOS</a>
+          PERFORMANCE VIDEOS</a> | <a id="travel-btn" data-toggle="tab" href="#travel">TRAVEL VIDEOS</a>
           </span>
       </div>
 
