--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="col-sm-4 about-right info-text">
         Shamlo Faek is a Visual Artist capitalizing on the social media movement of his generation.<br><br>Shamlo has worked with artists such as Future, Post Malone, Majid Jordan, Murda Beatz, Jazz Cartier and large companies including Redbull, Daniel
         Wellington, and Daily Hive.
-        <br><br>Using his gift of bringing any vision to life, Shamlo reaches the masses on a daily basis through the art of production.
+        <br><br>Using his gift of bringing any vision to life, Shamlo reaches the masses on a daily basis through the art of creation.
         <br><br><a href="mailto:shamfaek@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i><u>shamfaek@gmail.com</u></a><br>
         <span>
                   <a href="https://facebook.com/shamfaek"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
